add `translator` project

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <a href="https://github.com/MentalBlood/Marasmatic">⛓️ marasmatic</a><br />
   <a href="https://github.com/MentalBlood/gorage">🪆 gorage</a><br />
   <a href="https://github.com/MentalBlood/banduncamp">🪓 banduncamp</a><br />
+  <a href="https://github.com/MentalBlood/translator">📜 translator</a><br />
   <a href="https://github.com/MentalBlood/bottomless_ReJSON"
     >🔑 bottomless_ReJSON</a
   ><br />
