--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <a href="https://github.com/MentalBlood/podcaster">🎙️ podcaster</a><br />
   <a href="https://github.com/MentalBlood/yoop">🩸 yoop</a><br />
   <a href="https://github.com/MentalBlood/pytags">🪪 pytags</a><br />
+  <a href="https://github.com/MentalBlood/continental">📖 continental</a><br />
   <a href="https://github.com/MentalBlood/Marasmatic">⛓️ marasmatic</a><br />
   <a href="https://github.com/MentalBlood/gorage">🪆 gorage</a><br />
   <a href="https://github.com/MentalBlood/banduncamp">🪓 banduncamp</a><br />
