make links point to codeberg

--- a/index.html
+++ b/index.html
@@ -23,22 +23,24 @@
   <a href="https://lichess.org/@/MentalBlood">♟️</a>
 </p>
 <p>
-  <a href="https://github.com/MentalBlood/ruiner">🔫 ruiner</a><br />
-  <a href="https://github.com/MentalBlood/carton">🚬 carton</a><br />
-  <a href="https://github.com/MentalBlood/conveyor">🧮 conveyor</a><br />
-  <a href="https://github.com/MentalBlood/drunk_snail">🌪️ drunk snail</a><br />
-  <a href="https://github.com/MentalBlood/podcaster">🎙️ podcaster</a><br />
-  <a href="https://github.com/MentalBlood/yoop">🩸 yoop</a><br />
-  <a href="https://github.com/MentalBlood/continental">📖 continental</a><br />
-  <a href="https://github.com/MentalBlood/translator">📜 translator</a><br />
-  <a href="https://github.com/MentalBlood/bottomless_ReJSON"
+  <a href="https://codeberg.org/mentalblood/ruiner">🔫 ruiner</a><br />
+  <a href="https://codeberg.org/mentalblood/carton">🚬 carton</a><br />
+  <a href="https://codeberg.org/mentalblood/conveyor">🧮 conveyor</a><br />
+  <a href="https://codeberg.org/mentalblood/drunk_snail">🌪️ drunk snail</a
+  ><br />
+  <a href="https://codeberg.org/mentalblood/podcaster">🎙️ podcaster</a><br />
+  <a href="https://codeberg.org/mentalblood/yoop">🩸 yoop</a><br />
+  <a href="https://codeberg.org/mentalblood/continental">📖 continental</a
+  ><br />
+  <a href="https://codeberg.org/mentalblood/translator">📜 translator</a><br />
+  <a href="https://codeberg.org/mentalblood/bottomless_ReJSON"
     >🔑 bottomless_ReJSON</a
   ><br />
-  <a href="https://github.com/MentalBlood/logic_schemes_editor"
+  <a href="https://codeberg.org/mentalblood/logic_schemes_editor"
     >⚙️ logic schemes editor</a
   ><br />
-  <a href="https://github.com/MentalBlood/typer">⌨️ typer</a><br />
-  <a href="https://github.com/MentalBlood/board_game_constructor"
+  <a href="https://codeberg.org/mentalblood/typer">⌨️ typer</a><br />
+  <a href="https://codeberg.org/mentalblood/board_game_constructor"
     >📓 board game constructor</a
   >
 </p>
