drunk_snail -> drunk_snail.nim

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <a href="https://codeberg.org/mentalblood/ruiner">🔫 ruiner</a><br />
   <a href="https://codeberg.org/mentalblood/carton">🚬 carton</a><br />
   <a href="https://codeberg.org/mentalblood/conveyor">🧮 conveyor</a><br />
-  <a href="https://codeberg.org/mentalblood/drunk_snail">🌪️ drunk snail</a
+  <a href="https://codeberg.org/mentalblood/drunk_snail.nim">🌪️ drunk snail</a
   ><br />
   <a href="https://codeberg.org/mentalblood/podcaster">🎙️ podcaster</a><br />
   <a href="https://codeberg.org/mentalblood/yoop">🩸 yoop</a><br />
