--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   }</style
 ><title>mentalblood</title>
 <p>Stepan Necheporenko</p>
-<p>Python system developer</p>
+<p>Python / C++ / Nim system developer</p>
 <p>
   <a href="https://t.me/mentalblood">📨</a>
   <a href="mailto:neceporenkostepan@gmail.com">📧</a>
