--- a/index.html
+++ b/index.html
@@ -23,24 +23,23 @@
   <a href="https://lichess.org/@/MentalBlood">♟️</a>
 </p>
 <p>
-  <a href="https://codeberg.org/mentalblood/ruiner">🔫 ruiner</a><br />
-  <a href="https://codeberg.org/mentalblood/carton">🚬 carton</a><br />
-  <a href="https://codeberg.org/mentalblood/conveyor">🧮 conveyor</a><br />
-  <a href="https://codeberg.org/mentalblood/drunk_snail.nim">🌪️ drunk snail</a
+  <a href="https://github.com/mentalblood0/ruiner">🔫 ruiner</a><br />
+  <a href="https://github.com/mentalblood0/carton">🚬 carton</a><br />
+  <a href="https://github.com/mentalblood0/conveyor">🧮 conveyor</a><br />
+  <a href="https://github.com/mentalblood0/drunk_snail.nim">🌪️ drunk snail</a
   ><br />
-  <a href="https://codeberg.org/mentalblood/podcaster">🎙️ podcaster</a><br />
-  <a href="https://codeberg.org/mentalblood/yoop">🩸 yoop</a><br />
-  <a href="https://codeberg.org/mentalblood/continental">📖 continental</a
-  ><br />
-  <a href="https://codeberg.org/mentalblood/translator">📜 translator</a><br />
-  <a href="https://codeberg.org/mentalblood/bottomless_ReJSON"
+  <a href="https://github.com/mentalblood0/podcaster">🎙️ podcaster</a><br />
+  <a href="https://github.com/mentalblood0/yoop">🩸 yoop</a><br />
+  <a href="https://github.com/mentalblood0/continental">📖 continental</a><br />
+  <a href="https://github.com/mentalblood0/translator">📜 translator</a><br />
+  <a href="https://github.com/mentalblood0/bottomless_ReJSON"
     >🔑 bottomless_ReJSON</a
   ><br />
-  <a href="https://codeberg.org/mentalblood/logic_schemes_editor"
+  <a href="https://github.com/mentalblood0/logic_schemes_editor"
     >⚙️ logic schemes editor</a
   ><br />
-  <a href="https://codeberg.org/mentalblood/typer">⌨️ typer</a><br />
-  <a href="https://codeberg.org/mentalblood/board_game_constructor"
+  <a href="https://github.com/mentalblood0/typer">⌨️ typer</a><br />
+  <a href="https://github.com/mentalblood0/board_game_constructor"
     >📓 board game constructor</a
   >
 </p>
