new nim repos, update colors

--- a/index.html
+++ b/index.html
@@ -3,38 +3,40 @@
   content="width=device-width,initial-scale=1.0"
 /><style>
   body {
-    background: #222;
-    color: #ccc;
+    background: #0c0c0c;
+    color: #77a;
     font-size: 20pt;
     padding: 20pt;
   }
   a {
-    color: #ccc;
+    color: #598;
   }
   a:hover {
     color: greenyellow;
   }</style
 ><title>mentalblood</title>
 <p>Stepan Necheporenko</p>
-<p>Python / C++ / Nim system developer</p>
+<p>Nim / C++ / Python system developer</p>
 <p>
-  <a href="https://t.me/mentalblood">📨</a>
-  <a href="mailto:neceporenkostepan@gmail.com">📧</a>
-  <a href="https://lichess.org/@/MentalBlood">♟️</a>
+  <a href="https://t.me/mentalblood">&nbsp&nbsp📨&nbsp&nbsp</a>
+  <a href="mailto:necheporenko.stepan@yandex.ru">&nbsp&nbsp📧&nbsp&nbsp</a>
+  <a href="https://lichess.org/@/MentalBlood">&nbsp&nbsp♟️&nbsp&nbsp</a>
 </p>
 <p>
+  <a href="https://github.com/mentalblood0/drunk_snail.nim">🌪️ drunk snail</a
+  ><br />
+  <a href="https://github.com/mentalblood0/podcaster.nim">🎙️ podcaster</a><br />
+  <a href="https://github.com/mentalblood0/continental.nim">📖 continental</a
+  ><br />
+  <br />
   <a href="https://github.com/mentalblood0/ruiner">🔫 ruiner</a><br />
   <a href="https://github.com/mentalblood0/carton">🚬 carton</a><br />
   <a href="https://github.com/mentalblood0/conveyor">🧮 conveyor</a><br />
-  <a href="https://github.com/mentalblood0/drunk_snail.nim">🌪️ drunk snail</a
-  ><br />
-  <a href="https://github.com/mentalblood0/podcaster">🎙️ podcaster</a><br />
-  <a href="https://github.com/mentalblood0/yoop">🩸 yoop</a><br />
-  <a href="https://github.com/mentalblood0/continental">📖 continental</a><br />
   <a href="https://github.com/mentalblood0/translator">📜 translator</a><br />
   <a href="https://github.com/mentalblood0/bottomless_ReJSON"
     >🔑 bottomless_ReJSON</a
   ><br />
+  <br />
   <a href="https://github.com/mentalblood0/logic_schemes_editor"
     >⚙️ logic schemes editor</a
   ><br />
