--- a/index.html
+++ b/index.html
@@ -1,47 +1,42 @@
-<!doctype html><link rel="icon" href="data:," /><meta
-  name="viewport"
-  content="width=device-width,initial-scale=1.0"
-/><style>
+<!doctype html>
+<link rel="icon" href="data:," />
+<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+<style>
   body {
     background: #0c0c0c;
     color: #77a;
     font-size: 20pt;
     padding: 20pt;
   }
+
   a {
     color: #598;
   }
+
   a:hover {
     color: greenyellow;
-  }</style
-><title>mentalblood</title>
+  }
+</style>
+<title>mentalblood</title>
 <p>Stepan Necheporenko</p>
-<p>Nim / C++ / Python system developer</p>
+<p>Crystal / C++ / Python system developer</p>
 <p>
   <a href="https://t.me/mentalblood">&nbsp&nbsp📨&nbsp&nbsp</a>
   <a href="mailto:necheporenko.stepan@yandex.ru">&nbsp&nbsp📧&nbsp&nbsp</a>
   <a href="https://lichess.org/@/MentalBlood">&nbsp&nbsp♟️&nbsp&nbsp</a>
 </p>
 <p>
-  <a href="https://github.com/mentalblood0/drunk_snail.nim">🌪️ drunk snail</a
-  ><br />
-  <a href="https://github.com/mentalblood0/podcaster.nim">🎙️ podcaster</a><br />
-  <a href="https://github.com/mentalblood0/continental.nim">📖 continental</a
-  ><br />
+  <a href="https://github.com/mentalblood0/drunk_snail.cr">🌪️ drunk snail</a><br />
+  <a href="https://github.com/mentalblood0/podcaster.cr">🎙️ podcaster</a><br />
+  <a href="https://github.com/mentalblood0/conticrystal">📖 continental</a><br />
   <br />
   <a href="https://github.com/mentalblood0/ruiner">🔫 ruiner</a><br />
   <a href="https://github.com/mentalblood0/carton">🚬 carton</a><br />
   <a href="https://github.com/mentalblood0/conveyor">🧮 conveyor</a><br />
   <a href="https://github.com/mentalblood0/translator">📜 translator</a><br />
-  <a href="https://github.com/mentalblood0/bottomless_ReJSON"
-    >🔑 bottomless_ReJSON</a
-  ><br />
+  <a href="https://github.com/mentalblood0/bottomless_ReJSON">🔑 bottomless_ReJSON</a><br />
   <br />
-  <a href="https://github.com/mentalblood0/logic_schemes_editor"
-    >⚙️ logic schemes editor</a
-  ><br />
+  <a href="https://github.com/mentalblood0/logic_schemes_editor">⚙️ logic schemes editor</a><br />
   <a href="https://github.com/mentalblood0/typer">⌨️ typer</a><br />
-  <a href="https://github.com/mentalblood0/board_game_constructor"
-    >📓 board game constructor</a
-  >
+  <a href="https://github.com/mentalblood0/board_game_constructor">📓 board game constructor</a>
 </p>
